Add application icons and placeholder assets; implement database migration functionality
- Added new application icons in various resolutions (hdpi, mdpi, xhdpi, xxhdpi, xxxhdpi) to enhance visual consistency across devices.
- Introduced a placeholder SVG icon and a PNG placeholder image for use in the application.
- Created a Docker ignore file to exclude unnecessary files from the Docker context.
- Implemented a migration command in the backend to handle database migrations using Go.
- Added migration logic to read and execute SQL migration files, ensuring the database schema is up-to-date.
- Integrated environment variable loading for database connection parameters.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,7 +15,7 @@ RUN go mod download
 # Copy the source code
 COPY . .
 
-# Build the application
+# Build the application without including migration utility
 RUN CGO_ENABLED=1 GOOS=linux go build -a -o habitrack-server .
 
 # Create final lightweight image
