--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   table_calendar: ^3.0.9
   shimmer: ^3.0.0
   flutter_animate: ^4.2.0
-  flutter_local_notifications: 14.1.3
+  flutter_local_notifications: ^15.1.0+1
   timezone: ^0.9.2
   rxdart: ^0.27.7
 
